<resources>
    <string name="app_name">healthynutrition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="caseform">Case Form</string>
    <string name="casedetails">Enter case details</string>
    <string name="swipe_left_for_register">Swipe Left for Regidter</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="retype">Retype your password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="clientname">Enter reporter"s name</string>
    <string name="write_a_message">Write a message</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Enter your age</string>
    <string name="Age">Age</string>

    <string name="phone">Phone number</string>
    <string name="Phone">Enter Phone Number</string>
    <string name="language">Language</string>

    <string name="marital">Marital status</string>
    <string name="MaritalStatus">Enter marital status</string>

    <string name="health">Health status</string>
    <string name="Health">Enter Health status</string>

    <string name="location">Location</string>
    <string name="Location">Enter reporters Location</string>

    <string name="idno">Id Number</string>
    <string name="Idno">Enter Id number</string>

    <string name="tribe">Tribe</string>
    <string name="Tribe">Enter reporter tribe</string>

    <string name="afflicted">Are you the Afflicted?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="residence">Enter Reporters Residence</string>
    <string name="Residence">Where do you stay?</string>

    <string name="tag">Let\'s create for you an account</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_pass">Re-type your password</string>
    <string name="your_name">Full Name</string>
    <string name="submit">Submit Info</string>
    <string name="title_activity_userlogin">userlogin</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_casereport">casereport</string>
    <string name="title_activity_clientform">clientform</string>
    <string name="title_activity_agentscaselist">agentscaselist</string>
    <string name="title_activity_agent_profile">AgentProfile</string>
</resources>
