<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".caseform"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/caseform"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:text="@string/casedetails"
                android:textSize="20sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/clientname"
                android:layout_marginBottom="10dp"
                android:textSize="20sp">

            </TextView>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/et_custom"
                android:hint="@string/clientname"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="15sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/age"
                android:textSize="20sp">

            </TextView>


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:hint="@string/age"
                android:inputType="textPhonetic"
                android:padding="15dp"
                android:textSize="15sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/sex"
                android:textSize="20sp">

            </TextView>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="20dp"
                    android:padding="16dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selector"
                    android:textColor="@drawable/text_color"
                    android:elevation="4dp"
                    android:text="@string/male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_marginLeft="10dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selector"
                    android:textColor="@drawable/text_color"
                    android:elevation="4dp"
                    android:padding="16dp"
                    android:layout_margin="10dp"/>
            </RadioGroup>


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/residence"
                android:textSize="20sp">

            </TextView>

            <EditText

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/et_custom"
                android:hint="@string/residence"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="15sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/idno"
                android:textSize="20sp"/>

            <EditText

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/et_custom"
                android:hint="@string/Idno"
                android:inputType="textPhonetic"
                android:padding="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="15sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/email"
                android:textSize="20sp"/>

            <EditText

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/et_custom"
                android:hint="@string/email"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/afflicted"
                android:textSize="20sp"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="20dp"
                    android:padding="16dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selector"
                    android:textColor="@drawable/text_color"
                    android:elevation="4dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_marginLeft="20dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selector"
                    android:textColor="@drawable/text_color"
                    android:elevation="4dp"
                    android:padding="16dp"
                    android:layout_margin="10dp"/>
            </RadioGroup>

                <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/marital"
                android:textSize="20sp"/>

            <EditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/et_custom"
                android:hint="@string/MaritalStatus"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="15sp" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_custom"
                android:text="@string/submit"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>